# ai_kernel-communilty

./: .gitignore  .gitmodules  CONTRIBUTING.md  Community.slnx  Directory.Build.props  KrnlAICommunity.slnx  README.md  nuget.config  nuget.config.template
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  good-first-issue.yml
.github/workflows/: ci.yml  pr-review.yml  release.yml  vsix-publish.yml
KrnlAI.Community/: Welcome.md
KrnlAI.Community/.obsidian/: workspace.json
KrnlAI.Community/01-Getting-Started/: configuration.md  index.md
KrnlAI.Community/02-CLI/: index.md  tui.md
KrnlAI.Community/03-Architecture/: index.md
KrnlAI.Community/04-Cognitive-Cycle/: index.md
KrnlAI.Community/05-Memory/: index.md
KrnlAI.Community/08-SDK/: index.md
KrnlAI.Community/09-API/: index.md
KrnlAI.Community/10-Desktop/: index.md
KrnlAI.Community/13-Integrations/: index.md
db/migrations/: V001__init.sql  V002__semantic_memory.sql  V003__episodes.sql  V004__user_profile.sql  V005__episode_embeddings.sql  V006__domains.sql  V007__episodes_meta.sql  V008__world_beliefs.sql  V009__agent_metrics.sql  V010__agent_run_idempotency.sql  V011__semantic_chunks_fulltext.sql  V012__episodes_retention_indexes.sql  V013__semantic_chunks_retrieval_indexes.sql  V014__episodes_compaction_indexes.sql  V015__policy_versions_and_avg_delta.sql  V016__policy_rollback_audit.sql  V017__policy_rollback_operator_index.sql  V018__episodes_goal_id.sql  V019__agent_metrics_goal_id.sql  V020__semantic_chunk_lsh.sql  V022__episodes_domain.sql  (+60 more)
docs/: architecture.md  getting-started-cli.md  quickstart.md
scripts/: dev.ps1  generate-dev-cert.ps1  install.cmd  install.ps1  install.sh  translate_xaml.ps1
sdk/python/: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
sdk/python/.github/workflows/: ci.yml
sdk/python/aikernel/: __init__.py
sdk/python/aikernel/cli/: __init__.py  main.py
sdk/python/aikernel/cli/commands/: debug.py  deploy.py  init.py  run.py  security.py
sdk/python/aikernel/cli/templates/: agent.py
sdk/python/aikernel/core/: __init__.py  cycle.py
sdk/python/aikernel/core/emotion/: __init__.py  pain_reward.py  vad.py
sdk/python/aikernel/core/memory/: __init__.py  emotional_memory.py  episodic_memory.py  working_memory.py
sdk/python/aikernel/core/models/: __init__.py  cognitive.py  envelope.py
sdk/python/aikernel/core/policies/: __init__.py  engine.py
sdk/python/aikernel/core/risk/: __init__.py  scorer.py
sdk/python/aikernel/core/safety/: __init__.py  adversarial_guard.py  allowlist_check.py  ethical_enforcer.py  fundamental_rules.py  harm_classifier.py  rules.py  self_destruction_guard.py
sdk/python/aikernel/core/steps/: __init__.py  attention.py  evaluation.py  execution.py  governance.py  learning.py  memory.py  metacognition.py  outcome.py  planning.py  sensor.py
sdk/python/aikernel/core/stores/: __init__.py  inmemory.py
sdk/python/aikernel/enterprise/: __init__.py  client.py  merge.py  streaming.py
sdk/python/aikernel/enterprise/stores/: __init__.py  mysql_store.py  qdrant_store.py
sdk/python/aikernel/integrations/: __init__.py  autogen.py  crewai.py  fastapi.py  langchain.py
sdk/python/aikernel/llm/: __init__.py  anthropic.py  base.py  deepseek.py  google.py  groq.py  ollama.py  openai.py  openrouter.py  registry.py
sdk/python/docs/: api-reference.md  cli.md  cognitive-cycle.md  enterprise.md  integrations.md  quickstart.md  safety-system.md
sdk/python/examples/01-basic-agent/: main.py
sdk/python/examples/02-customer-support/: main.py
sdk/python/examples/03-research-assistant/: main.py
sdk/python/examples/04-multi-agent/: main.py
sdk/python/examples/05-enterprise-mode/: main.py
sdk/python/krnlai/: __init__.py
sdk/python/krnlai/cli/: __init__.py  main.py
sdk/python/krnlai/cli/commands/: debug.py  init.py  reasoning.py  run.py  security.py  thoughtgraph.py
sdk/python/krnlai/core/: __init__.py  cycle.py
sdk/python/krnlai/core/cognition/: __init__.py  adaptive.py  bias_detector.py  cognitive_load.py  confidence.py  reasoning_quality.py  thought_graph.py
sdk/python/krnlai/core/emotion/: __init__.py
sdk/python/krnlai/core/memory/: emotional_memory.py  semantic_memory.py
sdk/python/krnlai/core/models/: __init__.py  cognitive.py  emotion.py  envelope.py  moment.py  safety.py  thought.py
sdk/python/krnlai/core/policies/: __init__.py
sdk/python/krnlai/core/risk/: __init__.py
sdk/python/krnlai/core/safety/: __init__.py  adversarial_guard.py  fundamental_rules.py  harm_classifier.py  rules.py
sdk/python/krnlai/core/steps/: __init__.py  attention.py  execution.py  learning.py  metacognition.py  moment_classifier.py  outcome.py  planning.py  sensor.py
sdk/python/krnlai/core/stores/: __init__.py  exceptions.py  inmemory.py  moment_store.py
sdk/python/krnlai/enterprise/: __init__.py  client.py  merge.py  streaming.py
sdk/python/krnlai/enterprise/stores/: __init__.py  mysql_store.py  qdrant_store.py
sdk/python/krnlai/integrations/: __init__.py  autogen.py  crewai.py  fastapi.py  langchain.py
sdk/python/krnlai/llm/: deepseek.py  groq.py  ollama.py  openai.py  openrouter.py  registry.py
sdk/python/tests/: test_adaptive_processor.py  test_allowlist.py  test_bias_detector.py  test_cli.py  test_cognitive_load.py  test_confidence_calibration.py  test_cycle.py  test_dynamic_planning.py  test_emotion.py  test_enhanced_attention.py  test_enhanced_metacognition.py  test_enterprise.py  test_llm_providers.py  test_memory.py  test_models.py  test_moment_classifier.py  test_policies.py  test_reasoning_quality.py  test_risk.py  test_safety.py  test_stores.py  test_thought_graph.py  test_thought_models.py
src/KrnlAI.Desktop.Tauri/src-tauri/: Cargo.toml  tauri.conf.json
src/KrnlAI.Desktop.Tauri/src-tauri/capabilities/: default.json
src/KrnlAI.Desktop.Tauri/src-tauri/src/: audio.rs  camera.rs  commands.rs  hotkey.rs  lib.rs  main.rs  notifications.rs  plugin_sdk.rs  sidecar.rs  tray.rs  updater.rs  watchdog.rs
src/KrnlAI.Desktop.Tauri/src-tauri/tests/: vad_test.rs
(+1184 files in other folders)
