[project]
name = "aikernel"
version = "0.1.0"
description = "AI Kernel Python SDK — Cognitive agent framework with built-in safety"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "AI Kernel Team" },
]
keywords = ["ai", "agent", "cognitive", "safety", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.30.0"]
ollama = ["httpx>=0.27.0"]
langchain = ["langchain>=0.1.0"]
crewai = ["crewai>=0.1.0"]
autogen = ["pyautogen>=0.2.0"]
fastapi = ["fastapi>=0.100.0"]
all = [
    "aikernel[openai]",
    "aikernel[anthropic]",
    "aikernel[ollama]",
    "aikernel[langchain]",
    "aikernel[crewai]",
    "aikernel[autogen]",
    "aikernel[fastapi]",
]

[project.urls]
homepage = "https://github.com/ai-kernel/aikernel-py"
repository = "https://github.com/ai-kernel/aikernel-py"
documentation = "https://docs.aikernel.ai"

[project.scripts]
aikernel = "aikernel.cli.main:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E402"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[build-system]
requires = ["hatchling>=1.0.0"]
build-backend = "hatchling.build"
