[package]
name = "krnlai-desktop"
version = "0.1.0"
description = "Krnl-AI Desktop - Cross-platform client"
authors = ["Krnl-AI Team"]
edition = "2021"

[lib]
name = "krnlai_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
tauri-plugin-deep-link = "2"
serde = { version = "1", features = ["derive"] }
sysinfo = "0.33"
log = "0.4"
env_logger = "0.11"
open = "5"
rfd = "0.15"
